fix to app height, col spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   /* text-align: center; */
   background-color: black;
-  height: 100vh;
+  height: 100%;
  
 }
 
